# ComfyUI-FrameSkipping

./: .gitignore  FrameSelector.py  FrameSkipping.py  FrameTruncating.py  IntOperationsNode.py  MaskFrameSkipping.py  MaskGenerator.py  MaskSelector.py  README.md  README.zh.md  WhiteMaskGenerator.py  __init__.py  pyproject.toml
.github/workflows/: publish.yml
