[project]
name = "comfyui-frameskipping"
description = "Used to process video redrawing, frame skipping, frame ending early, etc."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/baicai99/ComfyUI-FrameSkipping"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-FrameSkipping"
Icon = ""
